<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
    android:id="@+id/question_text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="24dp"
    />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <Button
            android:id="@+id/True_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/True_button"
            android:background="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/False_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/False_button"
            android:background="@color/colorPrimaryDark"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/Next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next_button"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/Previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Previous_button"
        android:background="@color/colorPrimary"/>
    </LinearLayout>
    <Button
        android:id="@+id/Cheat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/cheat_button"
        android:background="@color/colorAccent"/>


</LinearLayout>